# notepad_dev

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docker/network/: index.html
docker/wsl/: index.html
docs/: index.md
docs/docker/: cleaner.md  network.md  wsl.md
docs/git/: checkout.md
docs/linux/: groups.md  users.md
docs/make/: make_install.md
docs/mkdocs/: markdown.md  mkdocs.md
docs/vscode/: vscode.md
linux/groups/: index.html
linux/users/: index.html
make/make_install/: index.html
mkdocs/markdown/: index.html
mkdocs/mkdocs/: index.html
search/: search_index.json
site/: 404.html  index.html
site/docker/cleaner/: index.html
site/docker/network/: index.html
site/docker/wsl/: index.html
site/git/checkout/: index.html
site/linux/groups/: index.html
site/linux/users/: index.html
site/mkdocs/mkdocs/: index.html
site/search/: search_index.json
vscode/vscode/: index.html
